Update email and postdoc dates.

--- a/CV-PagePiccinini.tex
+++ b/CV-PagePiccinini.tex
@@ -74,7 +74,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Name
-\contact{Page Piccinini}{www.pagepiccinini.com}{page.piccinini@ens.fr}
+\contact{Page Piccinini}{www.pagepiccinini.com}{page.piccinini@gmail.com}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -133,7 +133,7 @@
 
 \begin{body}
 	\vspace{14pt}
-	\textbf{Postdoctoral Researcher}, \emph{NeuroPsychologie Interventionnelle (NPI)} \hfill \emph{2016 - present}\\
+	\textbf{Postdoctoral Researcher}, \emph{NeuroPsychologie Interventionnelle (NPI)} \hfill \emph{2016 - 2017}\\
 	D\'epartement d'Etudes Cognitives (DEC), Ecole Normale Sup\'erieure, Paris, France
 	\medskip
 	
