Add new publications.

--- a/CV-PagePiccinini.tex
+++ b/CV-PagePiccinini.tex
@@ -168,6 +168,21 @@
 \begin{body}
 	\vspace{14pt}
 	
+	\textbf{Piccinini, P.}, Arvaniti, A. (2019). ``Dominance, mode, and individual variation in bilingual speech production and perception." \emph{Linguistic Approaches to Bilingualism}, Online First Article.\\
+	\medskip
+	
+	Politzer-Ahles, S., \textbf{Piccinini, P.} (2018). ``On visualizing phonetic data from repeated measures experiments with multiple random effects." \emph{Journal of Phonetics}, 70, 56-69.\\
+	\medskip
+	
+	Bergmann, C., Tsuji, S., \textbf{Piccinini, P. E.},  Lewis, M. L.,  Braginsky, M., Frank, F. C., Cristia, A. (2018). ``Promoting replicability in developmental research through meta-analyses: Insights from language acquisition research." \emph{Child Development}, 89(6), 1996-2009.\\
+	\medskip
+	
+	Tsuji, S., Bergmann, C., Lewis, M.,  Braginsky, M.,  \textbf{Piccinini, P.},  Frank, F. C., Cristia, A. (2017). ``MetaLab: A repository for meta-analyses on language development, and more." 	\emph{Proceedings of Interspeech 2017}, 2038-2039.\\
+	\medskip
+	
+	Lewis, M., Braginsky, M., Tsuji, S., Bergmann, C., \textbf{Piccinini, P. E.}, Cristia, A., Frank, M. C. (2016). ``A quantitative synthesis of early language acquisition using meta-analysis." \emph{PsyArXiv}, 21, Web.\\
+	\medskip
+		
 	Armstrong, M., \textbf{Piccinini, P.}, Ritchart, A. (2016). ``Non-question rises in narratives produced by mothers and daughters." \emph{Proceedings of the 8th Speech Prosody Conference}.\\
 	\medskip
 	
