Update end dates of affiliations.

--- a/CV-PagePiccinini.tex
+++ b/CV-PagePiccinini.tex
@@ -593,13 +593,13 @@ of code-switching\\
 \begin{body}
 	\vspace{14pt}
 	
-	\textbf{International Phonetic Association (IPA)} \hfill{} \emph{2015 - present}\\
+	\textbf{International Phonetic Association (IPA)} \hfill{} \emph{2015 - 2017}\\
 	\medskip
 	
-	\textbf{Acoustical Society of America (ASA)} \hfill{} \emph{2009 - present}\\
+	\textbf{Acoustical Society of America (ASA)} \hfill{} \emph{2009 - 2017}\\
 	\medskip
 
-	\textbf{Linguistic Society of America (LSA)} \hfill{} \emph{2009 - present}\\
+	\textbf{Linguistic Society of America (LSA)} \hfill{} \emph{2009 - 2017}\\
 	\medskip
 
 \end{body}
