Add mouse tracking publication.

--- a/CV-PagePiccinini.tex
+++ b/CV-PagePiccinini.tex
@@ -168,6 +168,9 @@
 \begin{body}
 	\vspace{14pt}
 	
+	\textbf{Piccinini, P.}, Cristia, A. (2019). ``Delayed processing in accented speech: Evidence from a mouse-tracking experiment." Retrieved from https://osf.io/2vmyc. DOI 10.31219/osf.io/2vmyc.\\
+	\medskip
+	
 	\textbf{Piccinini, P.}, Arvaniti, A. (2019). ``Dominance, mode, and individual variation in bilingual speech production and perception." \emph{Linguistic Approaches to Bilingualism}, Online First Article.\\
 	\medskip
 	
